--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -27,6 +27,7 @@ pv_opt:
 
   # If true the current config in HA will be over-written with that in the config.yaml. 
   overwrite_ha_on_restart: true
+  redact_personal_data_from_log: true
 
   consumption_history_days: 2
 
