--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -16,7 +16,7 @@ pv_opt:
 
   log: pv_opt_log
   prefix: pvopt
-  debug: True
+  # debug: True
 
 
 # User configuration ---  EDIT AWAY! ---
@@ -89,8 +89,8 @@ pv_opt:
   # octopus_import_tariff_code: E-2R-VAR-22-11-01-G
   # octopus_export_tariff_code: E-1R-AGILE-OUTGOING-19-05-13-G
 
-  octopus_import_tariff_code: E-1R-AGILE-FLEX-22-11-25-G 
-  octopus_export_tariff_code: E-1R-OUTGOING-LITE-FIX-12M-23-09-12-G
+  # octopus_import_tariff_code: E-1R-AGILE-FLEX-22-11-25-G 
+  # octopus_export_tariff_code: E-1R-OUTGOING-LITE-FIX-12M-23-09-12-G
 
   # octopus_import_tariff_code: E-1R-FLUX-IMPORT-23-02-14-G
   # octopus_export_tariff_code: E-1R-FLUX-EXPORT-23-02-14-G
