--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -28,7 +28,7 @@ pv_opt:
 
   # If true the current config in HA will be over-written with that in the config.yaml. 
   overwrite_ha_on_restart: true
-  redact_personal_data_from_log: true
+  # redact_personal_data_from_log: false
 
   consumption_history_days: 7
 
@@ -81,10 +81,10 @@ pv_opt:
   # Octopus account parameters
   # ========================================
 
-  # octopus_auto: False # Read tariffs from the Octopus Energy integration. If successful this over-rides the following parameters
+  octopus_auto: False # Read tariffs from the Octopus Energy integration. If successful this over-rides the following parameters
 
-  # octopus_account: !secret octopus_account
-  # octopus_api_key: !secret octopus_api_key
+  octopus_account: !secret octopus_account
+  octopus_api_key: !secret octopus_api_key
 
   # The following Can be omitted if either of the above options is working correctly:
 
