Additional logging for tariff entities

--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -81,10 +81,10 @@ pv_opt:
   # Octopus account parameters
   # ========================================
 
-  octopus_auto: False # Read tariffs from the Octopus Energy integration. If successful this over-rides the following parameters
+  # octopus_auto: False # Read tariffs from the Octopus Energy integration. If successful this over-rides the following parameters
 
-  octopus_account: !secret octopus_account
-  octopus_api_key: !secret octopus_api_key
+  # octopus_account: !secret octopus_account
+  # octopus_api_key: !secret octopus_api_key
 
   # The following Can be omitted if either of the above options is working correctly:
 
