--- a/apps/pv_opt/config/config_sunsynk.yaml
+++ b/apps/pv_opt/config/config_sunsynk.yaml
@@ -22,12 +22,9 @@ pv_opt:
 
 # User configuration ---  EDIT AWAY! ---
 
-  # inverter_type: "SOLIS_SOLAX_MODBUS"
   inverter_type: "SUNSYNK_SOLARSYNC2"
-  # inverter_type: "SOLIS_CORE_MODBUS"
-  # inverter_type: SOLIS_SOLARMAN
-  device_name: solis
-  inverter_sn: "000000"
+  device_name: solarsynk
+  inverter_sn: "000000"  # enter {sunsynk_serial} from solarsynk2 addon
 
   # If true the current config in HA will be over-written with that in the config.yaml. 
   overwrite_ha_on_restart: true
@@ -100,136 +97,18 @@ pv_opt:
   # octopus_import_tariff_code: E-1R-FLUX-IMPORT-23-02-14-G
   # octopus_export_tariff_code: E-1R-FLUX-EXPORT-23-02-14-G
   
+
   # ===============================================================================================================
-  # Brand / Integration Specific Config: SOLIS_SOLAX_MODBUS: https://github.com/wills106/homeassistant-solax-modbus
-  # ===============================================================================================================
-  #
-  # These are the default entities used with the Solis Solax Modbus integration. You can change them here and over-ride the defaults
-
-  # battery_voltage: sensor.{device_name}_battery_voltage
-  # update_cycle_seconds: 15
-  # maximum_dod_percent: number.{device_name}_battery_minimum_soc 
-  
-  # id_consumption_today: sensor.{device_name}_consumption_today
-  # id_grid_import_today: sensor.{device_name}_grid_import_today
-  # id_grid_export_today: sensor.{device_name}_grid_export_today
-
-  # id_battery_soc: sensor.{device_name}_battery_soc
-  # id_timed_charge_start_hours: number.{device_name}_timed_charge_start_hours
-  # id_timed_charge_start_minutes: number.{device_name}_timed_charge_start_minutes
-  # id_timed_charge_end_hours: number.{device_name}_timed_charge_end_hours
-  # id_timed_charge_end_minutes: number.{device_name}_timed_charge_end_minutes
-  # id_timed_charge_current: number.{device_name}_timed_charge_current
-
-  # id_timed_discharge_start_hours: number.{device_name}_timed_discharge_start_hours
-  # id_timed_discharge_start_minutes: number.{device_name}_timed_discharge_start_minutes
-  # id_timed_discharge_end_hours: number.{device_name}_timed_discharge_end_hours
-  # id_timed_discharge_end_minutes: number.{device_name}_timed_discharge_end_minutes
-  # id_timed_discharge_current: number.{device_name}_timed_discharge_current
-
-  # id_timed_charge_discharge_button: button.{device_name}_update_charge_discharge_times
-  # id_inverter_mode: select.{device_name}_energy_storage_control_switch
-
-  # ==============================================================================================================
-  # Brand / Integration Specific Config: SOLIS_CORE_MODBUS: https://github.com/fboundy/ha_solis_modbus
-  # ==============================================================================================================
-  #
-  # These are the default entities used with the Solis Core Modbus integration. You can change them here and over-ride the defaults
-
-  # modbus_hub: "{device_name}"
-  # modbus_slave: 1
-  # battery_voltage: sensor.{device_name}_battery_voltage
-  # maximum_dod_percent: sensor.{device_name}_overdischarge_soc
-  # update_cycle_seconds: 60
-  # id_consumption_today: sensor.{device_name}_daily_consumption
-
-  # id_grid_power: sensor.{device_name}_grid_active_power
-  # id_inverter_ac_power: sensor.{device_name}_inverter_ac_power
-  # id_battery_soc: sensor.{device_name}_battery_soc
-
-  # id_timed_charge_start_hours: sensor.{device_name}_timed_charge_start_hour
-  # id_timed_charge_start_minutes: sensor.{device_name}_timed_charge_start_minute
-  # id_timed_charge_end_hours: sensor.{device_name}_timed_charge_end_hour
-  # id_timed_charge_end_minutes: sensor.{device_name}_timed_charge_end_minute
-  # id_timed_charge_current: sensor.{device_name}_timed_charge_current_limit
-
-  # id_timed_discharge_start_hours: sensor.{device_name}_timed_discharge_start_hour
-  # id_timed_discharge_start_minutes: sensor.{device_name}_timed_discharge_start_minute
-  # id_timed_discharge_end_hours: sensor.{device_name}_timed_discharge_end_hour
-  # id_timed_discharge_end_minutes: sensor.{device_name}_timed_discharge_end_minute
-  # id_timed_discharge_current: sensor.{device_name}_timed_discharge_current_limit
-
-  # id_inverter_mode: sensor.{device_name}_energy_storage_control_switch
-
-  # ==============================================================================================================
-  # Brand / Integration Specific Config: SOLIS_SOLARMAN: https://github.com/StephanJoubert/home_assistant_solarman
-  # ==============================================================================================================
-  #
-  # These are the default entities used with the Solis Solarman integration. You can change them here and over-ride the defaults
-
-  # battery_voltage: sensor.{device_name}_battery_voltage
-  # maximum_dod_percent: 15
-  # update_cycle_seconds: 60
-  
-  # id_consumption_today: sensor.{device_name}_daily_house_backup_consumption
-
-  # id_grid_power: sensor.{device_name}_meter_active_power
-  # id_inverter_ac_power": sensor.{device_name}_inverter_ac_power
-  # id_battery_soc: sensor.{device_name}_battery_soc
-  # id_backup_mode_soc: 
-
-  # id_timed_charge_start_hours: sensor.{device_name}_timed_charge_start_hour
-  # id_timed_charge_start_minutes: sensor.{device_name}_timed_charge_start_minute
-  # id_timed_charge_end_hours: sensor.{device_name}_timed_charge_end_hour
-  # id_timed_charge_end_minutes: sensor.{device_name}_timed_charge_end_minute
-  # id_timed_charge_current: sensor.{device_name}_timed_charge_current
-
-  # id_timed_discharge_start_hours: sensor.{device_name}_timed_discharge_start_hour
-  # id_timed_discharge_start_minutes: sensor.{device_name}_timed_discharge_start_minute
-  # id_timed_discharge_end_hours: sensor.{device_name}_timed_discharge_end_hour
-  # id_timed_discharge_end_minutes: sensor.{device_name}_timed_discharge_end_minute
-  # id_timed_discharge_current: sensor.{device_name}_timed_discharge_current
-
-  # id_inverter_mode: sensor.{device_name}_storage_control_mode
-
- # ===============================================================================================================
-  # Brand / Integration Specific Config: SOLIS_SOLAX_MODBUS: https://github.com/wills106/homeassistant-solax-modbus
+  # Brand / Integration Specific Config: SUNSYNK_SOLARSYNK2: 
   # ===============================================================================================================
   #
   #
-  # These are the default entities used with the Solis Solarman integration. You can change them here and over-ride the defaults
+  # These are the default entities used with the Sunsynk Solarsynk2 integration. You can change them here and over-ride the defaults
 
-  # battery_voltage: sensor.{device_name}_battery_voltage
-  # maximum_dod_percent: 15
-  # update_cycle_seconds: 60
-  
-  # id_consumption_today: sensor.{device_name}_daily_house_backup_consumption
-
-  # id_grid_power: sensor.{device_name}_meter_active_power
-  # id_inverter_ac_power": sensor.{device_name}_inverter_ac_power
-  # id_battery_soc: sensor.{device_name}_battery_soc
-  # id_backup_mode_soc: 
-
-  # id_timed_charge_start_hours: sensor.{device_name}_timed_charge_start_hour
-  # id_timed_charge_start_minutes: sensor.{device_name}_timed_charge_start_minute
-  # id_timed_charge_end_hours: sensor.{device_name}_timed_charge_end_hour
-  # id_timed_charge_end_minutes: sensor.{device_name}_timed_charge_end_minute
-  # id_timed_charge_current: sensor.{device_name}_timed_charge_current
-
-  # id_timed_discharge_start_hours: sensor.{device_name}_timed_discharge_start_hour
-  # id_timed_discharge_start_minutes: sensor.{device_name}_timed_discharge_start_minute
-  # id_timed_discharge_end_hours: sensor.{device_name}_timed_discharge_end_hour
-  # id_timed_discharge_end_minutes: sensor.{device_name}_timed_discharge_end_minute
-  # id_timed_discharge_current: sensor.{device_name}_timed_discharge_current
-
-  # id_inverter_mode: sensor.{device_name}_storage_control_mode
-  # Tariff comparison
-  # id_daily_solar: sensor.{device_name}_power_generation_today
-  # alt_tariffs:
-  #   - name: Eco7_Agile
-  #     octopus_import_tariff_code: E-2R-VAR-22-11-01-G
-  #     octopus_export_tariff_code: E-1R-AGILE-OUTGOING-19-05-13-G
-
-  #   - name: Flux
-  #     octopus_import_tariff_code: E-1R-FLUX-IMPORT-23-02-14-G
-  #     octopus_export_tariff_code: E-1R-FLUX-EXPORT-23-02-14-G
+  "maximum_dod_percent":  "sensor.{device_name}_{inverter sn}_battery_shutdown_cap"
+  "id_battery_soc": " sensor.{device_name}_{inverter sn}_battery_soc"
+  "id_consumption_today": "sensor.{device_name}_{inverter sn}_day_load_energy"
+  "id_grid_import_today": "sensor.{device_name}_{inverter sn}_day_grid_import"
+  "id_grid_export_today": "sensor.{device_name}_{inverter sn}_day_grid_import"
+  "supports_hold_soc": false
+  "update_cycle_seconds": 300
