--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -31,6 +31,7 @@ pv_opt:
   # redact_personal_data_from_log: false
 
   consumption_history_days: 7
+  read_only: false
 
   # ========================================
   # Plant parameters
