--- a/pvopt_dashboard.yaml
+++ b/pvopt_dashboard.yaml
@@ -165,7 +165,9 @@ views:
           - type: entities
             entities:
               - entity: number.pvopt_pass_threshold_p
-                name: Threshold per pass  (p)
+                name: Charge Threshold per pass (p)
+              - entity: number.pvopt_discharge_threshold_p
+                name: Discharge Threshold per pass (p)
               - entity: number.pvopt_slot_threshold_p
                 name: Threshold per slot (p)
               - entity: number.pvopt_forced_power_group_tolerance
