--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -32,10 +32,16 @@ pv_opt:
 
   # If true the current config in HA will be over-written with that in the config.yaml. 
   overwrite_ha_on_restart: true
+
+  # If true the personal data will be redacted from the log files. 
   # redact_personal_data_from_log: false
 
-  consumption_history_days: 7
-  read_only: false
+  # ========================================
+  # Basic parameters
+  # ========================================
+  read_only: false # If true the inverter will not be controlled
+  forced_discharge: true # Enable forced discharging
+  allow_cyclinc: false # Enable alternate charge/discharge windows
 
   # ========================================
   # Plant parameters
@@ -55,33 +61,25 @@ pv_opt:
   # ========================================
   # Solcast configuration
   # ========================================
+   # use_solar: true
   #
   # id_solcast_today: sensor.solcast_pv_forecast_forecast_today
   # id_solcast_tomorrow: sensor.solcast_pv_forecast_forecast_tomorrow
-
-  # ========================================
-  # Solar and consumption forecast parameters
-  # ========================================
-  #
-  # Valid options are:
-  #
-  # Solcast         - the Solcast mid-case forecast [Default]
-  # Solcast_p90     - the Solcast high estimate
-  # Solcast_p10     - the Solcast high estimate
-  #
-  # Set this using an "input_select" helper and it can be varied on the fly
-
-  # solar_forecast:
-  # - input_select.solar_forecast_source
+  # solar_confidence_level: 50
   
-  # # consumption estimation
+  # ========================================
+  # Consumption forecast parameters
+  # ========================================
+  #
   # use_consumption_history: true
   # consumption_history_days:
   #   - 7
   # consumption_margin:
   #   - input_number.solar_opt_consumption_margin
+  #
   # daily_consumption_kwh: 17
   # shape_consumption_profile: true
+
   # ========================================
   # Octopus account parameters
   # ========================================
