Bug Fix for Solax v24.03.x

--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -36,6 +36,7 @@ pv_opt:
 
   consumption_history_days: 7
   read_only: false
+  debug: false
 
   # ========================================
   # Plant parameters
