--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -34,7 +34,7 @@ pv_opt:
   # redact_personal_data_from_log: false
 
   read_only: false
-  debug: false
+  debug: true
 
   # ========================================
   # Plant parameters
