--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -32,6 +32,7 @@ pv_opt:
 
   # If true the current config in HA will be over-written with that in the config.yaml. 
   overwrite_ha_on_restart: true
+  list_entities: true
 
   # If true the personal data will be redacted from the log files. 
   # redact_personal_data_from_log: false
@@ -41,7 +42,7 @@ pv_opt:
   # ========================================
   read_only: false # If true the inverter will not be controlled
   forced_discharge: true # Enable forced discharging
-  allow_cyclinc: false # Enable alternate charge/discharge windows
+  allow_cycling: false # Enable alternate charge/discharge windows
 
   # ========================================
   # Plant parameters
