--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -41,7 +41,7 @@ pv_opt:
   # ========================================
   read_only: false # If true the inverter will not be controlled
   forced_discharge: true # Enable forced discharging
-  allow_cycling: false # Enable alternate charge/discharge windows
+  allow_cyclic: false # Enable alternate charge/discharge windows
 
   # ========================================
   # Plant parameters
