Typo for export

--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -110,7 +110,7 @@ pv_opt:
   # id_battery_soc:  sensor.{device_name}_{inverter_sn}_battery_soc
   # id_consumption_today: sensor.{device_name}_{inverter_sn}_day_load_energy
   # id_grid_import_today: sensor.{device_name}_{inverter_sn}_day_grid_import
-  # id_grid_export_today: sensor.{device_name}_{inverter_sn}_day_grid_import
+  # id_grid_export_today: sensor.{device_name}_{inverter_sn}_day_grid_export
   # supports_hold_soc: false
   # update_cycle_seconds: 300
 
