--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -150,6 +150,9 @@ pv_opt:
   # maximum_dod_percent: sensor.{device_name}_overdischarge_soc
   # update_cycle_seconds: 60
   # id_consumption_today: sensor.{device_name}_daily_consumption
+  # id_consumption:
+  #   - sensor.{device_name}_house_load_power
+  #   - sensor.{device_name}_backup_load_power
 
   # id_grid_power: sensor.{device_name}_grid_active_power
   # id_inverter_ac_power: sensor.{device_name}_inverter_ac_power
@@ -203,6 +206,24 @@ pv_opt:
 
   # id_inverter_mode: sensor.{device_name}_storage_control_mode
 
+  # ===============================================================================================================
+  # Brand / Integration Specific Config: SUNSYNK_SOLARSYNK2: 
+  # ===============================================================================================================
+  #
+  #
+  # These are the default entities used with the Sunsynk Solarsynk2 integration. You can change them here and over-ride the defaults
+
+  # inverter_type: SUNSYNK_SOLARSYNK2
+  # device_name: solarsynk
+  # inverter_sn: 000000  # enter {sunsynk_serial} from solarsynk2 addon
+
+  # maximum_dod_percent:  20
+  # id_battery_soc:  sensor.{device_name}_{inverter_sn}_battery_soc
+  # id_consumption_today: sensor.{device_name}_{inverter_sn}_day_load_energy
+  # id_grid_import_today: sensor.{device_name}_{inverter_sn}_day_grid_import
+  # id_grid_export_today: sensor.{device_name}_{inverter_sn}_day_grid_export
+  # supports_hold_soc: false
+  # update_cycle_seconds: 300
 
 # Tariff comparison
   id_daily_solar: sensor.{device_name}_power_generation_today
