--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -226,7 +226,7 @@ pv_opt:
   # update_cycle_seconds: 300
 
 # Tariff comparison
-  id_daily_solar: sensor.{device_name}_power_generation_today
+  # id_daily_solar: sensor.{device_name}_power_generation_today
   id_solar_power: sensor.{device_name}_pv_total_power
   alt_tariffs:
     - name: Agile_Fix
@@ -236,6 +236,7 @@ pv_opt:
     - name: Eco7_Fix
       octopus_import_tariff_code: E-2R-VAR-22-11-01-G
       octopus_export_tariff_code: E-1R-OUTGOING-FIX-12M-19-05-13-G
+      
     - name: Flux
       octopus_import_tariff_code: E-1R-FLUX-IMPORT-23-02-14-G
       octopus_export_tariff_code: E-1R-FLUX-EXPORT-23-02-14-G
