--- a/pvopt_dashboard.yaml
+++ b/pvopt_dashboard.yaml
@@ -21,7 +21,7 @@ views:
                 name: Solar
                 max: 5000
                 icon: mdi:solar-power-variant
-              - entity: sensor.solis_house_load
+              - entity: sensor.solis_total_load
                 name: Load
                 max: 5000
               - entity: sensor.solis_battery_soc
@@ -64,21 +64,21 @@ views:
 
               |:--|---:|---:|---:|
 
-              |Base | {{'%0.2f' |
+              |Base | {{'%8.2f' |
               format(state_attr('sensor.pvopt_base_cost','cost_today')| float)}}
               | {{'%0.2f' |
               format(state_attr('sensor.pvopt_base_cost','cost_tomorrow')|
               float)}} |  {{'%0.2f' | format(states('sensor.pvopt_base_cost')|
               float)}} |  
 
-              |Optimised | {{'%0.2f' |
+              |Optimised | {{'%8.2f' |
               format(state_attr('sensor.pvopt_opt_cost','cost_today')| float)}}
               | {{'%0.2f' |
               format(state_attr('sensor.pvopt_opt_cost','cost_tomorrow')|
               float)}} |  {{'%0.2f' | format(states('sensor.pvopt_opt_cost')|
               float)}} |  
 
-              |<b>Cost Saving</b> | <b>{{'%0.2f' |
+              |<b>Cost Saving</b> | <b>{{'%8.2f' |
               format((state_attr('sensor.pvopt_base_cost','cost_today')|
               float-state_attr('sensor.pvopt_opt_cost','cost_today')| float) |
               round(2))}}</b> |<b>{{'%0.2f' |
@@ -87,6 +87,21 @@ views:
               | round(2))}} </b> |<b>  {{'%0.2f' |
               format((states('sensor.pvopt_base_cost')| float -
               states('sensor.pvopt_opt_cost')| float) | round(2)) }}</b> |  
+
+
+              <h3><u>Optimisation Breakdown (GBP)</u></h3>
+
+
+              |  | Cost ||
+
+              |:--|:--|:--|
+
+              {% set x = state_attr("sensor.pvopt_opt_cost","Summary")%}{%for y
+              in x%}|{{y}}|{{('%0.2f' |
+              format(x[y]['cost']))}}|{{x[y]['Selected']}}|
+
+              {%endfor%}
+
 
 
               <h3><u>Charge Plan</u></h3>
@@ -98,7 +113,7 @@ views:
               |:-------|--|--|:---------|--|--|:--------:|--|--|:--------:|--|--|:----------:|:--|{%
               for a in state_attr('sensor.pvopt_charge_start', 'windows') %}
 
-              {% set tf = '%d-%b %H:%M'%} | 
+              {% set tf = '%d-%b %H:%M %Z'%} | 
               {{as_local(as_datetime(a['start'])).strftime(tf)}}    |||
               {{as_local(as_datetime(a['end'])).strftime(tf)}} ||| {{a['forced']
               | float | round(0)}}W ||| {{a['soc'] | float | round(1)}}% |||
@@ -113,19 +128,40 @@ views:
               - entity: sensor.pvopt_status
                 name: Status
           - type: markdown
-            content: Control Parameters
+            content: <h3>Control Parameters
           - type: entities
             entities:
-              - entity: switch.pvopt_forced_discharge
-                name: Optimise Discharging
-              - entity: switch.pvopt_allow_cyclic
-                name: Allow Cyclic Charge/Discharge
-              - entity: switch.pvopt_read_only
-                name: Read Only Mode
               - entity: number.pvopt_optimise_frequency_minutes
                 name: Optimiser Freq (mins)
+              - entity: switch.pvopt_read_only
+                name: Read Only Mode
+              - entity: switch.pvopt_include_export
+                name: Include Export
+          - type: conditional
+            conditions:
+              - condition: state
+                entity: switch.pvopt_include_export
+                state: 'on'
+            card:
+              type: entities
+              entities:
+                - entity: switch.pvopt_forced_discharge
+                  name: Optimise Discharging
+          - type: conditional
+            conditions:
+              - condition: state
+                entity: switch.pvopt_forced_discharge
+                state: 'on'
+              - condition: state
+                entity: switch.pvopt_include_export
+                state: 'on'
+            card:
+              type: entities
+              entities:
+                - entity: switch.pvopt_allow_cyclic
+                  name: Allow Cyclic Charge/Discharge
           - type: markdown
-            content: Solar
+            content: <h3>Solar
           - type: entities
             entities:
               - entity: switch.pvopt_use_solar
@@ -139,9 +175,9 @@ views:
               type: entities
               entities:
                 - entity: number.pvopt_solcast_confidence_level
-                  name: Solcast Confidence Level                
+                  name: Solcast Confidence Level
           - type: markdown
-            content: Consumption
+            content: <h3>Consumption and EV
           - type: entities
             entities:
               - entity: switch.pvopt_use_consumption_history
@@ -172,20 +208,24 @@ views:
                   name: Daily Consumption (kWh)
                 - entity: switch.pvopt_shape_consumption_profile
                   name: Shape Consumption Profile
-          - type: markdown
-            content: Tuning Parameters
           - type: entities
             entities:
-              - entity: number.pvopt_pass_threshold_p
-                name: Charge Threshold per pass (p)
-              - entity: number.pvopt_discharge_threshold_p
-                name: Discharge Threshold per pass (p)
-              - entity: number.pvopt_slot_threshold_p
-                name: Threshold per slot (p)
-              - entity: number.pvopt_forced_power_group_tolerance
-                name: Power Resolution
+              - entity: select.pvopt_ev_charger
+                name: EV Charger
+          - type: conditional
+            conditions:
+              - condition: state
+                entity: select.pvopt_ev_charger
+                state_not: None
+            card:
+              type: entities
+              entities:
+                - entity: number.pvopt_ev_charger_power_watts
+                  name: EV Charger Power
+                - entity: number.pvopt_ev_battery_capacity_kwh
+                  name: EV Battery Capacity
           - type: markdown
-            content: System Parameters
+            content: <h3>System Parameters
           - type: entities
             entities:
               - entity: number.pvopt_battery_capacity_wh
@@ -198,6 +238,20 @@ views:
                 name: Inverter Efficiency
               - entity: number.pvopt_charger_efficiency_percent
                 name: Charger Efficiency
+          - type: markdown
+            content: Tuning Parameters
+          - type: entities
+            entities:
+              - entity: number.pvopt_pass_threshold_p
+                name: Charge threshold (p)
+              - entity: number.pvopt_discharge_threshold_p
+                name: Discharge threshold (p)
+              - entity: number.pvopt_plunge_threshold_p_kwh
+                name: Plunge threshold (p/kWh)
+              - entity: number.pvopt_slot_threshold_p
+                name: Threshold per slot (p)
+              - entity: number.pvopt_forced_power_group_tolerance
+                name: Power Resolution
       - type: custom:stack-in-card
         cards:
           - type: vertical-stack
@@ -244,7 +298,14 @@ views:
             span:
               start: day
             series:
+              - entity: sensor.solis_total_load
+                float_precision: 0
+                extend_to: now
+                group_by:
+                  func: avg
+                  duration: 30min
               - entity: sensor.solis_pv_total_power
+                float_precision: 0
                 extend_to: now
                 name: Actual
                 stroke_width: 1
@@ -266,7 +327,6 @@ views:
                 color: yellow
                 opacity: 0.7
                 stroke_width: 2
-                unit: '%'
                 offset: +15min
                 show:
                   in_header: false
@@ -444,15 +504,17 @@ views:
               - id: price
                 decimals: 0
                 min: -10
-                max: 60
+                max: 70
                 apex_config:
-                  tickAmount: 7
+                  tickAmount: 8
               - id: charge
                 decimals: 0
                 opposite: true
                 show: true
                 min: -4000
                 max: 4000
+                apex_config:
+                  tickAmount: 8
             stacked: false
             span:
               start: day
@@ -475,7 +537,7 @@ views:
                      return [new Date(entry.period_start), entry.forced];
                    });
               - entity: >-
-                  event.octopus_energy_electricity_19m1234567_1610012345678_current_day_rates
+                  event.octopus_energy_electricity_19m1337498_1610032016836_current_day_rates
                 yaxis_id: price
                 name: Historic Import Price
                 color: yellow
@@ -489,10 +551,11 @@ views:
                    });     
                 offset: '-15min'
                 show:
+                  in_header: false
                   legend_value: false
                   offset_in_name: false
               - entity: >-
-                  event.octopus_energy_electricity_19m1234567_1650012345678_export_current_day_rates
+                  event.octopus_energy_electricity_19m1337498_1650000216929_export_current_day_rates
                 yaxis_id: price
                 name: Historic Export Price
                 color: cyan
@@ -506,19 +569,21 @@ views:
                    });     
                 offset: '-15min'
                 show:
+                  in_header: false
                   legend_value: false
                   offset_in_name: false
               - entity: sensor.pvopt_opt_cost
                 type: line
                 name: Future Import Price
+                float_precision: 1
                 color: white
                 opacity: 1
                 stroke_width: 3
                 extend_to: now
-                unit: W
+                unit: p/kWh
                 offset: '-15min'
                 show:
-                  in_header: false
+                  in_header: true
                   legend_value: false
                   offset_in_name: false
                 data_generator: |
@@ -527,21 +592,82 @@ views:
                    });
                 yaxis_id: price
               - entity: sensor.pvopt_opt_cost
+                float_precision: 1
                 type: line
                 name: Future Export Price
                 color: green
                 opacity: 1
                 stroke_width: 3
                 extend_to: now
-                unit: W
+                unit: p/kWh
                 offset: '-15min'
                 show:
-                  in_header: false
+                  in_header: true
                   legend_value: false
                   offset_in_name: false
                 data_generator: |
                   return entity.attributes.export.map((entry) => {
                      return [new Date(entry.period_start), entry.export];
                    });
-                yaxis_id: price        
-title: PV Opt
+                yaxis_id: price
+      - type: custom:octopus-energy-rates-card
+        currentEntity: >-
+          event.octopus_energy_electricity_19m1337498_1610032016836_current_day_rates
+        futureEntity: >-
+          event.octopus_energy_electricity_19m1337498_1610032016836_next_day_rates
+        cols: 2
+        hour12: false
+        showday: true
+        showpast: false
+        title: Octopus Import
+        unitstr: p
+        lowlimit: 15
+        mediumlimit: 20
+        highlimit: 30
+        roundUnits: 2
+        cheapest: true
+        multiplier: 100
+      - type: custom:stack-in-card
+        cards:
+          - type: custom:apexcharts-card
+            apex_config:
+              chart:
+                height: 234px
+            header:
+              show: true
+              show_states: true
+              colorize_states: true
+              title: Optimised Daily Cost
+            graph_span: 7d
+            span:
+              start: day
+              offset: '-6d'
+            series:
+              - entity: sensor.pvopt_opt_cost_actual
+                name: Actual
+                extend_to: false
+                curve: stepline
+                float_precision: 2
+                show:
+                  legend_value: false
+              - entity: sensor.pvopt_opt_cost_current
+                name: Current Contract
+                curve: stepline
+                float_precision: 2
+                extend_to: false
+                show:
+                  legend_value: false
+              - entity: sensor.pvopt_opt_cost_eco7_fix
+                name: Eco7 / Fix
+                curve: stepline
+                float_precision: 2
+                extend_to: false
+                show:
+                  legend_value: false
+              - entity: sensor.pvopt_opt_cost_flux
+                curve: stepline
+                name: Flux
+                float_precision: 2
+                show:
+                  legend_value: false
+                extend_to: false
