--- a/pvopt_dashboard.yaml
+++ b/pvopt_dashboard.yaml
@@ -238,6 +238,8 @@ views:
                 name: Inverter Efficiency
               - entity: number.pvopt_charger_efficiency_percent
                 name: Charger Efficiency
+              - entity: number.pvopt_battery_current_limit_amps
+                name: Battery Current Limit                
           - type: markdown
             content: Tuning Parameters
           - type: entities
