adding vscode entries to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,17 @@ cython_debug/
 
 nordpool.py
 brm.py
+
+# Ignore files specific to VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
